updates jacoco version